Fix back office background color on settings
Using small devices in landscape (small height)
displays back office page as scrollable content.
In this case the background color of the page was
cropped to the height of the parent container (the
one with the overflow property).

--- a/app/client/admin/components/settings/settings.scss
+++ b/app/client/admin/components/settings/settings.scss
@@ -44,3 +44,7 @@ $OPA_SETTINGS_ERROR_MESSAGE_COLOR: #bdbdbd;
   }
 
 }
+
+.opa-settings-wrapper {
+  background-color: $OPA_SETTINGS_BACKGROUND_COLOR;
+}
